k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: udeaku-carespring
  labels:
    name: udeaku-carespring
    app: udeaku-carespring
    environment: production
